JERCompiler.java
/* JERCompiler.java */
/* Generated By:JavaCC: Do not edit this line. JERCompiler.java */
public class JERCompiler implements JERCompilerConstants {
  public static void main(String args[]) {
    try {
      System.out.println("Iniciando compilador JER...");
      System.out.println("Escribe el codigo a analizar (Presiona Ctrl+D / Ctrl+Z para finalizar):");
      JERCompiler parser = new JERCompiler(System.in);
      parser.Programa();
      System.out.println("\n[EXITO] Analisis lexico y sintactico finalizado sin errores.");
    } catch (ParseException e) {
      System.out.println("\n[ERROR SINTACTICO]: " + e.getMessage());
    } catch (TokenMgrError e) {
      System.out.println("\n[ERROR LEXICO]: " + e.getMessage());
    }
  }

/* =========================================
   ANALIZADOR SINTACTICO (PARSER)
   ========================================= */

// --- ESTRUCTURA GENERAL DEL PROGRAMA ---
  final public void Programa() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TIPO_ENT:
      case TIPO_DEC:
      case TIPO_CAD:
      case TIPO_CAR:
      case TIPO_MAT:
      case TIPO_VEC:
      case TIPO_BOO:
      case PIN:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      DeclaracionGlobal();
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INICIO:{
      BloqueInicio();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case BUCLE:{
      BloqueBucle();
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    jj_consume_token(0);
}

  final public void DeclaracionGlobal() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PIN:{
      DeclaracionPin();
      jj_consume_token(FIN_INSTRUCCION);
      break;
      }
    case TIPO_ENT:
    case TIPO_DEC:
    case TIPO_CAD:
    case TIPO_CAR:
    case TIPO_MAT:
    case TIPO_VEC:
    case TIPO_BOO:{
      DeclaracionVariable();
      jj_consume_token(FIN_INSTRUCCION);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

// --- DECLARACIONES ---
  final public void DeclaracionPin() throws ParseException {
    jj_consume_token(PIN);
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(COMO);
    ModoPin();
    jj_consume_token(ASIGNACION);
    jj_consume_token(NUMERO_ENTERO);
}

  final public void ModoPin() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SALIDA:{
      jj_consume_token(SALIDA);
      break;
      }
    case ENTRADA:{
      jj_consume_token(ENTRADA);
      break;
      }
    case ENTRADA_UP:{
      jj_consume_token(ENTRADA_UP);
      break;
      }
    case ANALOGO:{
      jj_consume_token(ANALOGO);
      break;
      }
    case PWM:{
      jj_consume_token(PWM);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void DeclaracionVariable() throws ParseException {
    TipoDato();
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(ASIGNACION);
    Expresion();
}

  final public void TipoDato() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TIPO_ENT:{
      jj_consume_token(TIPO_ENT);
      break;
      }
    case TIPO_DEC:{
      jj_consume_token(TIPO_DEC);
      break;
      }
    case TIPO_CAD:{
      jj_consume_token(TIPO_CAD);
      break;
      }
    case TIPO_CAR:{
      jj_consume_token(TIPO_CAR);
      break;
      }
    case TIPO_MAT:{
      jj_consume_token(TIPO_MAT);
      break;
      }
    case TIPO_VEC:{
      jj_consume_token(TIPO_VEC);
      break;
      }
    case TIPO_BOO:{
      jj_consume_token(TIPO_BOO);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

// --- BLOQUES PRINCIPALES ESP32 ---
  final public void BloqueInicio() throws ParseException {
    jj_consume_token(INICIO);
    jj_consume_token(APERTURA_BLOQUE);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TIPO_ENT:
      case TIPO_DEC:
      case TIPO_CAD:
      case TIPO_CAR:
      case TIPO_MAT:
      case TIPO_VEC:
      case TIPO_BOO:
      case IMP:
      case SI:
      case ENCENDER:
      case APAGAR:
      case DEBER:
      case ESPERAR:
      case IDENTIFICADOR:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_2;
      }
      Sentencia();
    }
    jj_consume_token(CIERRE_BLOQUE);
}

  final public void BloqueBucle() throws ParseException {
    jj_consume_token(BUCLE);
    jj_consume_token(APERTURA_BLOQUE);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TIPO_ENT:
      case TIPO_DEC:
      case TIPO_CAD:
      case TIPO_CAR:
      case TIPO_MAT:
      case TIPO_VEC:
      case TIPO_BOO:
      case IMP:
      case SI:
      case ENCENDER:
      case APAGAR:
      case DEBER:
      case ESPERAR:
      case IDENTIFICADOR:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
      Sentencia();
    }
    jj_consume_token(CIERRE_BLOQUE);
}

// --- SENTENCIAS DENTRO DE LOS BLOQUES ---
  final public void Sentencia() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TIPO_ENT:
    case TIPO_DEC:
    case TIPO_CAD:
    case TIPO_CAR:
    case TIPO_MAT:
    case TIPO_VEC:
    case TIPO_BOO:{
      DeclaracionVariable();
      jj_consume_token(FIN_INSTRUCCION);
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      if (jj_2_1(2)) {
        AsignacionVariable();
        jj_consume_token(FIN_INSTRUCCION);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ENCENDER:
        case APAGAR:
        case DEBER:
        case ESPERAR:{
          InstruccionESP32();
          jj_consume_token(FIN_INSTRUCCION);
          break;
          }
        case SI:{
          EstructuraSi();
          break;
          }
        case IMP:{
          EstructuraImprimir();
          jj_consume_token(FIN_INSTRUCCION);
          break;
          }
        default:
          jj_la1[9] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
}

  final public void AsignacionVariable() throws ParseException {
    jj_consume_token(IDENTIFICADOR);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASIGNACION:{
      jj_consume_token(ASIGNACION);
      break;
      }
    case ASIG_INC:{
      jj_consume_token(ASIG_INC);
      break;
      }
    case ASIG_DEC:{
      jj_consume_token(ASIG_DEC);
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    Expresion();
}

// --- INSTRUCCIONES ESPECÍFICAS DEL MICROCONTROLADOR ---
  final public void InstruccionESP32() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ENCENDER:{
      jj_consume_token(ENCENDER);
      jj_consume_token(IDENTIFICADOR);
      break;
      }
    case APAGAR:{
      jj_consume_token(APAGAR);
      jj_consume_token(IDENTIFICADOR);
      break;
      }
    case ESPERAR:{
      jj_consume_token(ESPERAR);
      jj_consume_token(NUMERO_ENTERO);
      break;
      }
    case DEBER:{
      jj_consume_token(DEBER);
      jj_consume_token(IDENTIFICADOR);
      jj_consume_token(SEPARADOR);
      Expresion();
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void EstructuraImprimir() throws ParseException {
    jj_consume_token(IMP);
    Expresion();
}

// --- ESTRUCTURAS DE CONTROL ---
  final public void EstructuraSi() throws ParseException {
    jj_consume_token(SI);
    Condicion();
    jj_consume_token(APERTURA_BLOQUE);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TIPO_ENT:
      case TIPO_DEC:
      case TIPO_CAD:
      case TIPO_CAR:
      case TIPO_MAT:
      case TIPO_VEC:
      case TIPO_BOO:
      case IMP:
      case SI:
      case ENCENDER:
      case APAGAR:
      case DEBER:
      case ESPERAR:
      case IDENTIFICADOR:{
        ;
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_4;
      }
      Sentencia();
    }
    jj_consume_token(CIERRE_BLOQUE);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SINO:{
      jj_consume_token(SINO);
      jj_consume_token(APERTURA_BLOQUE);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case TIPO_ENT:
        case TIPO_DEC:
        case TIPO_CAD:
        case TIPO_CAR:
        case TIPO_MAT:
        case TIPO_VEC:
        case TIPO_BOO:
        case IMP:
        case SI:
        case ENCENDER:
        case APAGAR:
        case DEBER:
        case ESPERAR:
        case IDENTIFICADOR:{
          ;
          break;
          }
        default:
          jj_la1[13] = jj_gen;
          break label_5;
        }
        Sentencia();
      }
      jj_consume_token(CIERRE_BLOQUE);
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      ;
    }
}

  final public void Condicion() throws ParseException {
    Expresion();
    OperadorRelacional();
    Expresion();
}

  final public void OperadorRelacional() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IGUAL:{
      jj_consume_token(IGUAL);
      break;
      }
    case MAYOR_QUE:{
      jj_consume_token(MAYOR_QUE);
      break;
      }
    case MENOR_QUE:{
      jj_consume_token(MENOR_QUE);
      break;
      }
    case MAYOR_IGUAL:{
      jj_consume_token(MAYOR_IGUAL);
      break;
      }
    case MENOR_IGUAL:{
      jj_consume_token(MENOR_IGUAL);
      break;
      }
    case DIFERENTE:{
      jj_consume_token(DIFERENTE);
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

// --- EXPRESIONES (Valores, Operaciones, Lecturas) ---
  final public void Expresion() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NUMERO_ENTERO:
    case NUMERO_DECIMAL:
    case CADENA:
    case CARACTER:
    case VERDADERO:
    case FALSO:
    case IDENTIFICADOR:{
      ValorSimple();
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case POTENCIA:
        case RAIZ:
        case SUMA:
        case RESTA:
        case MULT:
        case DIV:
        case MODULO:{
          ;
          break;
          }
        default:
          jj_la1[16] = jj_gen;
          break label_6;
        }
        OperadorAritmetico();
        ValorSimple();
      }
      break;
      }
    case LEER:
    case LEER_A:{
      LecturaESP32();
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void ValorSimple() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NUMERO_ENTERO:{
      jj_consume_token(NUMERO_ENTERO);
      break;
      }
    case NUMERO_DECIMAL:{
      jj_consume_token(NUMERO_DECIMAL);
      break;
      }
    case CADENA:{
      jj_consume_token(CADENA);
      break;
      }
    case CARACTER:{
      jj_consume_token(CARACTER);
      break;
      }
    case VERDADERO:{
      jj_consume_token(VERDADERO);
      break;
      }
    case FALSO:{
      jj_consume_token(FALSO);
      break;
      }
    case IDENTIFICADOR:{
      jj_consume_token(IDENTIFICADOR);
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void OperadorAritmetico() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SUMA:{
      jj_consume_token(SUMA);
      break;
      }
    case RESTA:{
      jj_consume_token(RESTA);
      break;
      }
    case MULT:{
      jj_consume_token(MULT);
      break;
      }
    case DIV:{
      jj_consume_token(DIV);
      break;
      }
    case MODULO:{
      jj_consume_token(MODULO);
      break;
      }
    case POTENCIA:{
      jj_consume_token(POTENCIA);
      break;
      }
    case RAIZ:{
      jj_consume_token(RAIZ);
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void LecturaESP32() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LEER:{
      jj_consume_token(LEER);
      break;
      }
    case LEER_A:{
      jj_consume_token(LEER_A);
      break;
      }
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(IDENTIFICADOR);
}

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_3_1()
 {
    if (jj_3R_AsignacionVariable_174_3_7()) return true;
    return false;
  }

  private boolean jj_3R_AsignacionVariable_174_3_7()
 {
    if (jj_scan_token(IDENTIFICADOR)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(51)) {
    jj_scanpos = xsp;
    if (jj_scan_token(49)) {
    jj_scanpos = xsp;
    if (jj_scan_token(50)) return true;
    }
    }
    return false;
  }

  /** Generated Token Manager. */
  public JERCompilerTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[21];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static private int[] jj_la1_2;
  static {
	   jj_la1_init_0();
	   jj_la1_init_1();
	   jj_la1_init_2();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x1000fe00,0x0,0x0,0x1000fe00,0xe0000000,0xfe00,0x12fe00,0x12fe00,0xfe00,0x120000,0x0,0x0,0x12fe00,0x12fe00,0x200000,0x0,0x0,0x0,0x0,0x0,0x0,};
	}
	private static void jj_la1_init_1() {
	   jj_la1_1 = new int[] {0x0,0x200,0x400,0x0,0x3,0x0,0x14c,0x14c,0x0,0x14c,0xe0000,0x14c,0x14c,0x14c,0x0,0xe0000000,0x1f300000,0x1f830,0x1f800,0x1f300000,0x30,};
	}
	private static void jj_la1_init_2() {
	   jj_la1_2 = new int[] {0x0,0x0,0x0,0x0,0x0,0x0,0x8000,0x8000,0x0,0x0,0x0,0x0,0x8000,0x8000,0x0,0x7,0x0,0x8000,0x8000,0x0,0x0,};
	}
  final private JJCalls[] jj_2_rtns = new JJCalls[1];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public JERCompiler(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public JERCompiler(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new JERCompilerTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 21; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 21; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public JERCompiler(java.io.Reader stream) {
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new JERCompilerTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 21; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new JERCompilerTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 21; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public JERCompiler(JERCompilerTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 21; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(JERCompilerTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 21; i++) jj_la1[i] = -1;
	 for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   if (++jj_gc > 100) {
		 jj_gc = 0;
		 for (int i = 0; i < jj_2_rtns.length; i++) {
		   JJCalls c = jj_2_rtns[i];
		   while (c != null) {
			 if (c.gen < jj_gen) c.first = null;
			 c = c.next;
		   }
		 }
	   }
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }

  @SuppressWarnings("serial")
  static private final class LookaheadSuccess extends java.lang.Error {
    @Override
    public Throwable fillInStackTrace() {
      return this;
    }
  }
  static private final LookaheadSuccess jj_ls = new LookaheadSuccess();
  private boolean jj_scan_token(int kind) {
	 if (jj_scanpos == jj_lastpos) {
	   jj_la--;
	   if (jj_scanpos.next == null) {
		 jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
	   } else {
		 jj_lastpos = jj_scanpos = jj_scanpos.next;
	   }
	 } else {
	   jj_scanpos = jj_scanpos.next;
	 }
	 if (jj_rescan) {
	   int i = 0; Token tok = token;
	   while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
	   if (tok != null) jj_add_error_token(kind, i);
	 }
	 if (jj_scanpos.kind != kind) return true;
	 if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
	 return false;
  }


/** Get the next Token. */
  final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;
  private int[] jj_lasttokens = new int[100];
  private int jj_endpos;

  private void jj_add_error_token(int kind, int pos) {
	 if (pos >= 100) {
		return;
	 }

	 if (pos == jj_endpos + 1) {
	   jj_lasttokens[jj_endpos++] = kind;
	 } else if (jj_endpos != 0) {
	   jj_expentry = new int[jj_endpos];

	   for (int i = 0; i < jj_endpos; i++) {
		 jj_expentry[i] = jj_lasttokens[i];
	   }

	   for (int[] oldentry : jj_expentries) {
		 if (oldentry.length == jj_expentry.length) {
		   boolean isMatched = true;

		   for (int i = 0; i < jj_expentry.length; i++) {
			 if (oldentry[i] != jj_expentry[i]) {
			   isMatched = false;
			   break;
			 }

		   }
		   if (isMatched) {
			 jj_expentries.add(jj_expentry);
			 break;
		   }
		 }
	   }

	   if (pos != 0) {
		 jj_lasttokens[(jj_endpos = pos) - 1] = kind;
	   }
	 }
  }

  /** Generate ParseException. */
  public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[80];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 21; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		   if ((jj_la1_1[i] & (1<<j)) != 0) {
			 la1tokens[32+j] = true;
		   }
		   if ((jj_la1_2[i] & (1<<j)) != 0) {
			 la1tokens[64+j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 80; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 jj_endpos = 0;
	 jj_rescan_token();
	 jj_add_error_token(0, 0);
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage);
  }

  private boolean trace_enabled;

/** Trace enabled. */
  final public boolean trace_enabled() {
	 return trace_enabled;
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

  private void jj_rescan_token() {
	 jj_rescan = true;
	 for (int i = 0; i < 1; i++) {
	   try {
		 JJCalls p = jj_2_rtns[i];

		 do {
		   if (p.gen > jj_gen) {
			 jj_la = p.arg; jj_lastpos = jj_scanpos = p.first;
			 switch (i) {
			   case 0: jj_3_1(); break;
			 }
		   }
		   p = p.next;
		 } while (p != null);

		 } catch(LookaheadSuccess ls) { }
	 }
	 jj_rescan = false;
  }

  private void jj_save(int index, int xla) {
	 JJCalls p = jj_2_rtns[index];
	 while (p.gen > jj_gen) {
	   if (p.next == null) { p = p.next = new JJCalls(); break; }
	   p = p.next;
	 }

	 p.gen = jj_gen + xla - jj_la; 
	 p.first = token;
	 p.arg = xla;
  }

  static final class JJCalls {
	 int gen;
	 Token first;
	 int arg;
	 JJCalls next;
  }

}
